--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /projects/unix/_obj*/
 /projects/unix/libmupen64plus*.so*
+projects/unix/libmupen64plus.dylib
+src/asm_defines/asm_defines_gas.h
+projects/.DS_Store
+src/asm_defines/asm_defines_nasm.h
